--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,14 @@
 #sidebar {
   width: 30%;
   float: left;
+  height: 100vh;
+  overflow: scroll;
+}
+
+pre {
+  background: #f5f5f5;
+  padding: 10px;
+  margin: 0px;
 }
 
 #canvas {
