--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,23 @@
   overflow: scroll;
 }
 
+.form {
+  height: 100vh;
+}
+
+textarea {
+  height: 100vh !important;
+  max-height: 100vh !important;
+}
+
 pre {
   background: #f5f5f5;
   padding: 10px;
   margin: 0px;
+}
+
+svg {
+  display: none;
 }
 
 #canvas {
