Visualize line and scatter data

--- a/src/style.css
+++ b/src/style.css
@@ -21,10 +21,15 @@ pre {
 }
 
 svg {
-  display: none;
+  // display: none;
 }
 
 #canvas {
+  width: 70%;
+  float: left;
+}
+
+#visualize {
   width: 70%;
   float: left;
 }
